--- a/build.gradle
+++ b/build.gradle
@@ -44,10 +44,10 @@ configurations {
 
 dependencies {
     toCopy 'org.json:json:20200518'      
-    implementation configurations.toCopy    
 }
 
 task copyToLib(type: Copy) {
+    dependsOn(':compileJava')
     from configurations.toCopy 
     into 'lib'
 }
